S&R: Start searching for the next match after the end of the previous match

BUG: 315770
FIXED-IN: 4.11