kate/plugins/search/search_folder.cpp
@@ -134,7 +134,7 @@ void SearchFolder::searchFile(const QFileInfo &item)
             // limit line length
             if (line.length() > 512) line = line.left(512);
             emit matchFound(item.absoluteFilePath(), i, column, line, m_regExp.matchedLength());
-            column = m_regExp.indexIn(line, column + 1);
+            column = m_regExp.indexIn(line, column + m_regExp.cap().size());
         }
         i++;
     }
